# tokensentinel-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  integration-patterns.md  providers.md  quickstart-anthropic.md  quickstart-bedrock.md  quickstart-gemini.md  quickstart-openai.md  waste-taxonomy.md
docs/user/: 01-installation.md  02-quickstart.md  03-modes.md  04-waste-rules.md  05-providers.md  06-integrations.md  07-api-reference.md  08-troubleshooting.md  09-faq.md  README.md
examples/: anthropic_basic.py  bedrock_basic.py  gemini_basic.py  tool_loop_demo.py
tests/: conftest.py  test_anthropic_wrapper.py  test_bedrock_wrapper.py  test_cloud_client.py  test_cohere_wrapper.py  test_coverage_gaps.py  test_deepgram_wrapper.py  test_elevenlabs_wrapper.py  test_events_usage_extra.py  test_gemini_wrapper.py  test_langchain_enricher.py  test_openai_compat.py  test_openai_stream_block_warning.py  test_openai_streaming.py  test_openai_wrapper.py  test_otel_enricher.py  test_policy_client.py  test_properties.py  test_properties_v031.py  test_rebrand_aliases.py  test_repair_loop.py  test_replicate_wrapper.py  test_rules_audio_multichannel_doubling.py  test_rules_context_bloat.py  test_rules_dos_caps.py  test_rules_embedding_waste.py  test_rules_keyword_word_boundary.py  test_rules_model_misroute.py  test_rules_redaction.py  test_rules_rerank_thrash.py  test_rules_retrieval_thrash.py  test_rules_retry_storm.py  test_rules_tool_definition_bloat.py  test_rules_tool_definition_redact_names.py  test_rules_tool_loop.py  test_rules_vision_cost_concentration.py  test_rules_vision_high_detail_misroute.py  test_rules_vision_re_upload.py  test_rules_voice_switching_loop.py  test_rules_zombie.py  (+12 more)
token_sentinel/: __init__.py  cloud_client.py  events.py  policy_client.py  sentinel.py  tracer.py
token_sentinel/enrichers/: __init__.py  langchain.py  otel.py
token_sentinel/rules/: __init__.py  audio_multichannel_doubling.py  base.py  context_bloat.py  embedding_waste.py  model_misroute.py  repair_loop.py  rerank_thrash.py  retrieval_thrash.py  retry_storm.py  tool_definition_bloat.py  tool_loop.py  vision_cost_concentration.py  vision_high_detail_misroute.py  vision_re_upload.py  voice_switching_loop.py  zombie.py
token_sentinel/wrappers/: __init__.py  anthropic.py  bedrock.py  cohere.py  deepgram.py  elevenlabs.py  gemini.py  openai.py  replicate.py  voyage.py
