[project]
name = "token-sentinel"
version = "1.0.0"
description = "Predictive token-waste detection for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "TokenSentinel contributors", email = "shakyasmreta@gmail.com" }]
keywords = ["llm", "agents", "finops", "observability", "anthropic", "openai", "tokens", "cost"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
bedrock = ["boto3>=1.35.0"]
voyage = ["voyageai>=0.2"]
cohere = ["cohere>=5.0"]
replicate = ["replicate>=0.40"]
deepgram = ["deepgram-sdk>=3.0"]
elevenlabs = ["elevenlabs>=1.0"]
embeddings = ["sentence-transformers>=2.7.0", "numpy>=1.26.0"]
audio-metadata = ["mutagen>=1.47"]
# Perceptual fallback for vision_re_upload. Catches re-uploads where
# bytes differ (resize / recompression) but the image is visually the same.
vision-perceptual = ["imagehash>=4.3", "Pillow>=10"]
# LangChain BaseCallbackHandler enricher. Lets users get TokenSentinel
# coverage by attaching a callback to LangChain, without manually wrapping
# each LLM client.
langchain = ["langchain-core>=0.3"]
# OTel SpanProcessor enricher. Covers CrewAI / AutoGen / Pydantic AI
# (anything emitting gen_ai.* spans per OTel semantic conventions). Single
# enricher class across all three frameworks; framework quirks captured as
# tags on the CallRecord.
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-semantic-conventions>=0.48b0",
]
all = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "boto3>=1.35.0",
    "voyageai>=0.2",
    "cohere>=5.0",
    "replicate>=0.40",
    "deepgram-sdk>=3.0",
    "elevenlabs>=1.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "mutagen>=1.47",
    "imagehash>=4.3",
    "Pillow>=10",
    "langchain-core>=0.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-semantic-conventions>=0.48b0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.15",
    "pytest-cov>=7.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://tokensentinel.dev"
Documentation = "https://docs.tokensentinel.dev"
Issues = "https://github.com/tokensentinel/tokensentinel-sdk-python/issues"
Repository = "https://github.com/tokensentinel/tokensentinel-sdk-python"
Changelog = "https://github.com/tokensentinel/tokensentinel-sdk-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["token_sentinel"]

[tool.hatch.build.targets.sdist]
include = [
    "token_sentinel/**",
    "tests/**",
    "examples/**",
    "docs/**",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501: line length is enforced by formatter, not lint.
# SIM105: try/except/pass is intentional for defensive instrumentation paths.
ignore = ["E501", "SIM105"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
